added bower_components, .gitignore, and added my collections and models

--- a/index.html
+++ b/index.html
@@ -10,9 +10,11 @@
   </main>
 
   <script type='text/template' id="homePage">
-    <input type="text" value="firstName" placeholder="First Name">
-    <input type="text" value="lastName" placeholder="Last Name">
-    <input type='text' value="phoneNumber" placeholder="Phone Number">
+    <h1>Registration Area</h1>
+    <input type="text" placeholder="First Name">
+    <input type="text" placeholder="Last Name">
+    <input type="text" placeholder="Address">
+    <input type='text' placeholder="Phone Number">
   </script>
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.4/jquery.js"></script>
